Display epoch value on the main page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <body>
         <h1 style="text-align: center; margin-bottom: 0;">epoch</h1>
+
+        <h3 id="epoch" style="display: none; text-align: center;"></h3>
         
         <div id="links">
             <p id="setEpoch">set epoch</p>
